[package]
name = "clipstash"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "clipstash"
path = "src/lib/mod.rs"

[dependencies]
chrono = { version = "0.4.19", feature = ["serde"] }
derive_more = "0.99.17"
rand = "0.8.4"
serde = "1.0.133"
serde_json = "1.0.74"
thiserror = "1.0.30"
uuid = { version = "0.8.2", feature = ["serde", "v4"] }
