[package]
name = "clipstash"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "clipstash"
path = "src/lib/mod.rs"

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
crossbeam-channel = "0.5.2"
derive_more = "0.99.17"
dotenv = "0.15.0"
handlebars = { version = "4.2.0", features = ["dir_source"] }
parking_lot = "0.11.2"
rand = "0.8.4"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
structopt = "0.3.25"
sqlx = { version = "0.5.10", features = ["sqlite", "runtime-tokio-rustls", "macros", "chrono", "uuid"] }
thiserror = "1.0.30"
tokio = "1.15.0"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
